# git_hub_streak_notifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
streak_notifier/: cli_configuration.py  main.py  scheduler.py
